# Templates

./: .dockerignore  .gitignore  .isort.cfg  Dockerfile  README.md  alembic.ini  angular.json  dev.docker-compose.yml  docker-compose.yml  note.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 6f9d5ebd7d74_initial_migratoin.py
app/: auth.py  cache_setup.py  database.py  main.py  manage.py  models.py  settings.py
app/app/: models.py
app/routes/: auth.py  auth_routes.py  comments.py  post_routes.py  posts.py  user_routes.py
app/schemas/: __init__.py  auth_token_schema.py  comments_schema.py  post_schema.py  user_schemas.py
app/services/: auth_services.py
app/tickets/: asgi.py  settings.py  urls.py  wsgi.py
app/utils/: pagination.py
src/: index.html
src/app/: app-routing.module.ts  app.component.spec.ts  app.module.ts
src/app/layout/default/: default.component.html  default.component.ts  default.module.ts
src/app/layout/fullwidth/: fullwidth.component.html  fullwidth.component.scss  fullwidth.module.ts
src/app/modules/: modules.module.ts
src/app/shared/: shared.module.ts
src/app/shared/footer/: footer.component.html  footer.component.ts
src/app/shared/header/: header.component.html  header.component.scss  header.component.ts
src/app/shared/sidenav/: sidenav.component.html  sidenav.component.scss  sidenav.component.ts
src/app/utils/material/: material.module.ts
