[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$|\.py$'
exclude = 'venv/|alembic/'

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fahad-md-kamal <faahad.hossain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
alembic = "^1.11.3"
fastapi = {extras = ["all"], version = "^0.103.0"}
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
redis = "^5.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
